# SailTuner

./: .gitignore  CMakeLists.txt  SailTuner.apparmor  SailTuner.desktop  clickable.yaml  harbour-sailtuner.pro  manifest.json.in  snapcraft.yaml
qml/: Desktop.qml
rpm/: harbour-sailtuner.spec
